feat: BaseEntity 추상 클래스로 변경 및 어노테이션 수정, 그에 따른 자식 클래스들 어노테이션 수정